| 2

- Fix indentations;
- Remove useless constant in calc;

| 1

- Use typeof instead of typeof_unqual;
- Use CHAR_WIDTH instead of CHAR_BIT;

| 0

- Initial;