@@ -1,11 +1,11 @@
 /*
 	Copyright 2022 Gabriel Jensen.
 
-	This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+	This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
 
-	This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+	This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
 
-	You should have received a copy of the GNU General Public License along with this program. If not, see <https://www.gnu.org/licenses/>. 
+	You should have received a copy of the GNU Affero General Public License along with this program. If not, see <https://www.gnu.org/licenses/>. 
 */
 
 #include <agbsum.h>
@@ -15,7 +15,7 @@
 #include <stdint.h>
 #include <stdio.h>
 
-_Static_assert(CHAR_WIDTH == 0x8u);
+_Static_assert(CHAR_WIDTH == 0x8u,"agbsum only support 8-bit byte systems");
 
 typeof (agbsum_dat) agbsum_dat;
 
